# fundus-vessels-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: .gitignore
docs/source/: conf.py  index.rst
docs/source/api/seg2graph/: seg2graph-module.rst
docs/source/api/segment/: segment-module.rst
docs/source/api/vgraph/: matching.rst  vascular_graph.rst  vgraph-module.rst
docs/source/welcome/: quickstart.rst
examples/: 01_Vessels Segmentation.ipynb  02_Vascular Graph Extraction.ipynb  03_Graph_Comparison.ipynb  03_Vascular_Geometry_Extraction.ipynb  03_Vascular_Geometry_Extraction_with_reconnection.ipynb  03_Vascular_Parametrization.ipynb  04_Vascular_AV_Tree_Parsing.ipynb  04_Vascular_AV_Tree_Parsing_With_Correction.ipynb  04_Vascular_Parametrization.ipynb  05_Biomarkers_demo.ipynb  05_Global_Vascular_Biomarkers.ipynb  Untitled.ipynb
experimentation/: segmentation.py
lib/fundus_vascular_graph/: skeletonization.py  vascular_graph.py
lib/fundus_vessels_toolkit/: __init__.py  fundus_utilities.py  metrics.py  seg2graph.py  vascular_graph.py
lib/fundus_vessels_toolkit/metrics/: __init__.py  cl_dice.py  topological.py  vascular_metrics.py
lib/fundus_vessels_toolkit/models/: segmentation.py
lib/fundus_vessels_toolkit/seg2graph/: __init__.py  graph_extraction.py  graph_utilities.py  graph_utilities_cy.pyx  seg2graph.py  skeleton_utilities.py  skeletonization.py
lib/fundus_vessels_toolkit/vgraph/: __init__.py  edit_distance_cy.pyx  graph_cython.pyx  graph_utils_cython.pyx  matching.py  vascular_graph.py
lib/steered_cnn/kbase_conv/: __init__.py  kbase.py
lib/steered_cnn/kbase_conv/.ipynb_checkpoints/: kbase-checkpoint.py  reparametrized_cnn-checkpoint.py
lib/steered_cnn/models/: __init__.py  config.py  hemeling.py  steered.py
lib/steered_cnn/models/.ipynb_checkpoints/: __init__-checkpoint.py  config-checkpoint.py  hemeling-checkpoint.py  steered-checkpoint.py  steered_hemeling-checkpoint.py
lib/steered_cnn/models/backbones/: model.py  (+2 more)
lib/steered_cnn/steered_conv/: __init__.py  ortho_kbase.py  steerable_filters.py  steered_conv.py  steered_kbase.py
lib/steered_cnn/utils/: index.py  plot.py  rotequivariance_toolbox.py
samples/: 01_Vessels Segmentation.ipynb  02_Vascular Graph Extraction.ipynb  03_Graph_Comparison.ipynb  Check seg2graph.ipynb
src/fundus_vessels_toolkit/: __init__.py  fundus_utilities.py
src/fundus_vessels_toolkit/metrics/: vascular_metrics.py
src/fundus_vessels_toolkit/models/: __init__.py  segmentation.py  utils.py
src/fundus_vessels_toolkit/pipelines/: __init__.py  av_to_biomarkers.py  avseg_to_tree.py  seg_to_graph.py
src/fundus_vessels_toolkit/seg2graph/: graph_extraction.py  graph_utilities.py  seg2graph.py  skeletonization.py
src/fundus_vessels_toolkit/seg_to_graph/: __init__.py  graph_extraction.py  graph_simplification.py  seg_to_graph.py  skeleton_parsing.py  skeletonization.py  skeletonize.py
src/fundus_vessels_toolkit/segment/: __init__.py  segmentation.py
src/fundus_vessels_toolkit/segment_to_graph/: __init__.py  av_tree_parsing.py  geometry_parsing.py  graph_simplification.py  skeleton_parsing.py  skeletonize.py  tree_simplification.py
src/fundus_vessels_toolkit/utils/: __init__.py  bezier.py  binary_mask.py  cluster.py  cpp_optimized.py  data_io.py  dataclass.py  exceptions.py  fundus.py  fundus_projections.py  geometric.py  image.py  jppype.py  lookup_array.py  math.py  numpy.py  pandas.py  safe_import.py  skeleton.py  skeleton_cy.pyx  stitching.py  torch.py  tree.py  yx_curves.py
src/fundus_vessels_toolkit/vascular_data_objects/: __init__.py  fundus_data.py  vbranch_geo_attr.py  vbranch_geodata.py  vgeometric_data.py  vgraph.py  vtree.py
src/fundus_vessels_toolkit/vascular_graph/: __init__.py  vgraph.py
src/fundus_vessels_toolkit/vgraph/: graph.py  vascular_graph.py
src/fundus_vessels_toolkit/vmatching/: __init__.py  descriptor.py  edit_distance_cy.cpp  graph_matching.py  matching.py  node_matching.py  registration.py  vgraph_edit_distance.py  vgraph_matching.py  visualisation_tools.py
src/fundus_vessels_toolkit/vparameters/: __init__.py  bifurcations.py  branches.py  tortuosity.py
src/steered_cnn/: __init__.py
src/steered_cnn/kbase_conv/: kbase.py
src/steered_cnn/models/: config.py  hemeling.py  old_hemeling.py  steered.py
src/steered_cnn/steered_conv/: steerable_filters.py  steered_conv.py  steered_convbn.py  steered_kbase.py
src/steered_cnn/utils/: orientation_field.py  plot.py  rotequivariance_toolbox.py
(+98 files in other folders)
