[project]

name = "FundusVesselsToolkit"
version = '0.0.5'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """A bundle of tools to segment, classify, skeletonize fundus vascular tree."""
readme = 'README.md'

requires-python = '>=3.10'
dependencies = [
    'numpy',
    
    'opencv-python-headless',
    'scikit-image',
    'scipy',
    
    'pygmtools',
    'networkx>=3.1',
    
    'torch>=2.0.0',
    'segmentation-models-pytorch'
]

[project.optional-dependencies]
samples = ['jppype', 'jupyterlab']
experimentations = ['nntemplate']

[project.urls]
Homepage = 'https://github.com/gabriel-lepetitaimon/fundus-vessels-toolkit'
Source = 'https://github.com/gabriel-lepetitaimon/fundus-vessels-toolkit'


[build-system]
requires = ["wheel", "setuptools", "Cython~=3.0.0b3", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

ignore = ["E501",       # Ignore line length
          "E402"]       # Ignore import at top file violation

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

target-version = "py310"
