[project]

name = "fundus-vessels-toolkit"
version = '0.0.5'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """A bundle of tools to segment, classify, skeletonize fundus vascular tree."""
readme = 'README.md'

requires-python = '>=3.10'
dependencies = [
    'numpy',
    
    'opencv-python-headless',
    'scikit-image',
    'scipy',
    
    'pygmtools',
    'networkx>=3.1',
    
    'torch>=2.0.0',
    'segmentation-models-pytorch'
]

[project.optional-dependencies]
samples = ['jppype', 'jupyterlab']
experimentations = ['nntemplate']

[project.urls]
Homepage = 'https://github.com/gabriel-lepetitaimon/fundus-vessels-toolkit'
Source = 'https://github.com/gabriel-lepetitaimon/fundus-vessels-toolkit'


[build-system]
requires = ["wheel", "setuptools", "Cython~=3.0.0b3", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.black]
line-length = 120

[tool.ruff.isort]
known-first-party = ["fundus_vessels_toolkit"]
section-order = ["future", "standard-library", "third-party", "steered_cnn", "first-party", "local-folder"]

[tool.ruff.isort.sections]
"steered_cnn" = ["steered_cnn"]